--- a/view-more/viewmore.html
+++ b/view-more/viewmore.html
@@ -3,33 +3,23 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>View More</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <link href="view-more.css" rel="stylesheet" />
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+  <body class="bg-dark">
+    <nav class="navbar navbar-expand-lg sticky-top text-white" id="nav-bar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Reynime</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse ms-3" id="navbarNavDropdown">
+        <a class="navbar-brand" href="#" id="web-name"><b>Reynime</b></a>
+        <div class="collapse navbar-collapse ml-8" id="navbarNavDropdown">
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <li class="nav-item" id="home">
+              <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Browse</a>
