refactored code in login and signup pages

--- a/sign-up/signup.html
+++ b/sign-up/signup.html
@@ -10,17 +10,22 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link href="login.css" />
+    <link href="sign-up.css" />
   </head>
   <body class="bg-dark">
     <div class="container">
       <div class="row">
+        <a
+          style="font-weight: 900; color: white; text-decoration: none; margin-top: 10px;"
+          href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\home\home.html"
+          ><b>Reynime</b></a
+        >
         <div class="col-4 offset-md-3 mx-auto my-auto">
           <div class="card mt-5">
             <div class="card-body text-center">
               <img
-                src="https://cdn-icons-png.flaticon.com/128/5087/5087592.png"
-                width="80px"
+                src="https://cdn-icons-png.flaticon.com/128/8862/8862243.png"
+                width="70px"
               />
 
               <h2 class="my-4" id="title"></h2>
@@ -33,6 +38,13 @@
                     placeholder="Email address"
                   />
                 </div>
+                <div class="mb-3">
+                  <input
+                    id="user-name"
+                    class="form-control"
+                    placeholder="Username"
+                  />
+                </div>
                 <div class="mb-4">
                   <input
                     id="user-password"
@@ -40,19 +52,8 @@
                     placeholder="password"
                   />
                 </div>
-                <div class="form-check mb-4" style="display: flex;">
-                  <!-- <label class="form-check-label"> -->
-                    <input class="form-check-input m-0" type="checkbox" /> Remember
-                    me
-                  <!-- </label> -->
-                </div>
                 <div class="d-grid gap-2">
-                  <button
-                    class="btn"
-                    style="background-color: #efd676; font-weight: 600"
-                  >
-                    Login
-                  </button>
+                  <button class="btn btn-dark">Sign Up</button>
                 </div>
               </form>
             </div>
