--- a/login/login.html
+++ b/login/login.html
@@ -15,12 +15,22 @@
   <body class="bg-dark">
     <div class="container">
       <div class="row">
+        <a
+          style="
+            font-weight: 900;
+            color: white;
+            text-decoration: none;
+            margin-top: 10px;
+          "
+          href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\home\home.html"
+          ><b>Reynime</b></a
+        >
         <div class="col-4 offset-md-3 mx-auto my-auto">
           <div class="card mt-5">
             <div class="card-body text-center">
               <img
-                src="https://cdn-icons-png.flaticon.com/128/3871/3871011.png"
-                width="50px"
+                src="https://cdn-icons-png.flaticon.com/128/3870/3870822.png"
+                width="70px"
               />
 
               <h2 class="my-4" id="title"></h2>
@@ -44,6 +54,17 @@
                   <!-- <label class="form-check-label"> -->
                   <input class="form-check-input" type="checkbox" /> Remember me
                   <!-- </label> -->
+                </div>
+                <div>
+                  <h6>
+                    No account?
+                    <a
+                      style="color: black"
+                      href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\sign-up\signup.html"
+                    >
+                      sign up
+                    </a>
+                  </h6>
                 </div>
                 <div class="d-grid gap-2">
                   <button class="btn btn-dark">Login</button>
