--- a/view-more/viewmore.html
+++ b/view-more/viewmore.html
@@ -15,11 +15,11 @@
   <body class="bg-dark">
     <nav class="navbar navbar-expand-lg sticky-top text-white" id="nav-bar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#" id="web-name"><b>Reynime</b></a>
+        <a class="navbar-brand" href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\home\home.html" id="web-name"><b>Reynime</b></a>
         <div class="collapse navbar-collapse ml-8" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item" id="home">
-              <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+              <a class="nav-link active text-white" aria-current="page" href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\home\home.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Browse</a>
@@ -51,8 +51,10 @@
                 </li>
               </ul>
             </li>
-            <li>
-              <a href="../login"><span class="icon_profile"></span> Login</a>
+             <li class="nav-item">
+              <a class="nav-link" href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\login\login.html">
+                Login
+              </a>
             </li>
           </ul>
         </div>
