refactored code in home page

--- a/home/home.html
+++ b/home/home.html
@@ -172,8 +172,8 @@
             <img
               src="https://cdn.animixplay.to/i/5660afa590de3d8493d72abc2aef7d4c.jpg"
             />
-            <h5>Bleach</h5>
-            <h6>EP 100/800</h6>
+            <h5>Bleach: Thousand-Year Blood War</h5>
+            <h6>EP 8/13</h6>
           </div>
           <div class="col">
             <img
@@ -184,8 +184,8 @@
           </div>
           <div class="col">
             <img src="https://cdn.animixplay.to/min/mal/1483/126005.jpg" />
-            <h5>My Hero Academia</h5>
-            <h6>EP 8/?</h6>
+            <h5>My Hero Academia Season 6</h5>
+            <h6>EP 9/?</h6>
           </div>
         </div>
         <br />
