refactored code in home page

--- a/home/home.html
+++ b/home/home.html
@@ -180,42 +180,41 @@
               src="https://cdn.animixplay.to/i/55b1e8116c273ed5f56aaf06279cfb6d.jpg"
             />
             <h5>Blue Lock</h5>
-            <h6>EP 8/?</h6>
+            <h6>EP 8/24</h6>
           </div>
           <div class="col">
             <img src="https://cdn.animixplay.to/min/mal/1483/126005.jpg" />
             <h5>My Hero Academia Season 6</h5>
+            <h6>EP 9/25</h6>
+          </div>
+        </div>
+        <br />
+        <div class="row row-cols-4">
+          <div class="col">
+            <img
+              src="https://cdn.animixplay.to/i/d745de809e9219112a3d2dd36fada30f.jpg"
+            />
+            <h5>Mob Psycho 100 III</h5>
             <h6>EP 9/?</h6>
           </div>
+          <div class="col">
+            <img src="https://gogocdn.net/cover/black-clover-jump-festa-2016-special.png" />
+            <h5>Black Clover</h5>
+            <h6>EP 170/170</h6>
+          </div>
+          <div class="col">
+              <img src="https://cdn.animixplay.to/i/2b749c9e3e272f2cf4b4f019ffe6c252.jpg" />
+              <h5>Boruto: Naruto Next Generations</h5>
+              <h6>EP 257/?</h6>
+            </div>
+            <div class="col">
+                <img src="https://cdn.myanimelist.net/images/anime/1676/128448.jpg" />
+                <h5>Jujutsu Kaisen</h5>
+                <h6>EP 24/24</h6>
+            </div>
         </div>
         <br />
         <div class="row row-cols-4">
-          <div class="col">
-            <img src="https://cdn.animixplay.to/i/2b749c9e3e272f2cf4b4f019ffe6c252.jpg" />
-            <h5>Boruto: Naruto Next Generations</h5>
-            <h6>EP 257/?</h6>
-          </div>
-          <div class="col">
-            <img
-              src="https://cdn.animixplay.to/i/5660afa590de3d8493d72abc2aef7d4c.jpg"
-            />
-          </div>
-          <div class="col">
-            <img
-              src="https://cdn.animixplay.to/i/55b1e8116c273ed5f56aaf06279cfb6d.jpg"
-            />
-          </div>
-          <div class="col">
-            <img src="https://cdn.animixplay.to/min/mal/1483/126005.jpg" />
-          </div>
-        </div>
-        <br />
-        <div class="row row-cols-4">
-          <div class="col">
-            <img
-              src="https://cdn.animixplay.to/i/6a34b962f903f3e9e9f02cb08a4d92a8.jpg"
-            />
-          </div>
           <div class="col">
             <img
               src="https://cdn.animixplay.to/i/5660afa590de3d8493d72abc2aef7d4c.jpg"
