--- a/home/home.html
+++ b/home/home.html
@@ -20,7 +20,9 @@
         <div class="collapse navbar-collapse ml-8" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item" id="home">
-              <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+              <a class="nav-link active text-white" aria-current="page" href="#"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Browse</a>
@@ -53,7 +55,10 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\login\login.html">
+              <a
+                class="nav-link"
+                href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\login\login.html"
+              >
                 Login
               </a>
             </li>
@@ -162,9 +167,7 @@
       <div class="container text-center text-white mt-4">
         <div class="row row-cols-4">
           <div class="col">
-            <img
-              src="https://cdn.animixplay.to/min/mal/1806/126216.jpg"
-            />
+            <img src="https://cdn.animixplay.to/min/mal/1806/126216.jpg" />
             <h5 class="mt-1">Chainsaw Man</h5>
             <h6>EP 8/12</h6>
           </div>
@@ -198,35 +201,25 @@
             <h6>EP 9/?</h6>
           </div>
           <div class="col">
-            <img src="https://gogocdn.net/cover/black-clover-jump-festa-2016-special.png" />
+            <img
+              src="https://gogocdn.net/cover/black-clover-jump-festa-2016-special.png"
+            />
             <h5>Black Clover</h5>
             <h6>EP 170/170</h6>
           </div>
           <div class="col">
-              <img src="https://cdn.animixplay.to/i/2b749c9e3e272f2cf4b4f019ffe6c252.jpg" />
-              <h5>Boruto: Naruto Next Generations</h5>
-              <h6>EP 257/?</h6>
-            </div>
-            <div class="col">
-                <img src="https://cdn.myanimelist.net/images/anime/1676/128448.jpg" />
-                <h5>Jujutsu Kaisen</h5>
-                <h6>EP 24/24</h6>
-            </div>
-        </div>
-        <br />
-        <div class="row row-cols-4">
-          <div class="col">
             <img
-              src="https://cdn.animixplay.to/i/5660afa590de3d8493d72abc2aef7d4c.jpg"
+              src="https://cdn.animixplay.to/i/2b749c9e3e272f2cf4b4f019ffe6c252.jpg"
             />
+            <h5>Boruto: Naruto Next Generations</h5>
+            <h6>EP 257/?</h6>
           </div>
           <div class="col">
             <img
-              src="https://cdn.animixplay.to/i/55b1e8116c273ed5f56aaf06279cfb6d.jpg"
+              src="https://cdn.myanimelist.net/images/anime/1676/128448.jpg"
             />
-          </div>
-          <div class="col">
-            <img src="https://cdn.animixplay.to/min/mal/1483/126005.jpg" />
+            <h5>Jujutsu Kaisen</h5>
+            <h6>EP 24/24</h6>
           </div>
         </div>
       </div>
