--- a/view-more/viewmore.html
+++ b/view-more/viewmore.html
@@ -60,6 +60,124 @@
         </div>
       </div>
     </nav>
+    <div class="container text-center text-white mt-4">
+        <div class="row row-cols-4">
+          <div class="col">
+            <img src="https://cdn.animixplay.to/min/mal/1806/126216.jpg" />
+            <h5 class="mt-1">Chainsaw Man</h5>
+            <h6>EP 8/12</h6>
+          </div>
+          <div class="col">
+            <img
+              src="https://cdn.animixplay.to/i/5660afa590de3d8493d72abc2aef7d4c.jpg"
+            />
+            <h5>Bleach: Thousand-Year Blood War</h5>
+            <h6>EP 8/13</h6>
+          </div>
+          <div class="col">
+            <img
+              src="https://cdn.animixplay.to/i/55b1e8116c273ed5f56aaf06279cfb6d.jpg"
+            />
+            <h5>Blue Lock</h5>
+            <h6>EP 8/24</h6>
+          </div>
+          <div class="col">
+            <img src="https://cdn.animixplay.to/min/mal/1483/126005.jpg" />
+            <h5>My Hero Academia Season 6</h5>
+            <h6>EP 9/25</h6>
+          </div>
+        </div>
+        <br />
+        <div class="row row-cols-4">
+          <div class="col">
+            <img
+              src="https://cdn.animixplay.to/i/d745de809e9219112a3d2dd36fada30f.jpg"
+            />
+            <h5>Mob Psycho 100 III</h5>
+            <h6>EP 9/?</h6>
+          </div>
+          <div class="col">
+            <img
+              src="https://gogocdn.net/cover/black-clover-jump-festa-2016-special.png"
+            />
+            <h5>Black Clover</h5>
+            <h6>EP 170/170</h6>
+          </div>
+          <div class="col">
+            <img
+              src="https://cdn.animixplay.to/i/2b749c9e3e272f2cf4b4f019ffe6c252.jpg"
+            />
+            <h5>Boruto: Naruto Next Generations</h5>
+            <h6>EP 257/?</h6>
+          </div>
+          <div class="col">
+            <img
+              src="https://cdn.myanimelist.net/images/anime/1676/128448.jpg"
+            />
+            <h5>Jujutsu Kaisen</h5>
+            <h6>EP 24/24</h6>
+          </div>
+        </div>
+        <br/>
+        <div class="row row-cols-4">
+          <div class="col">
+            <img src="https://cdn.animixplay.to/min/mal/1806/126216.jpg" />
+            <h5 class="mt-1">Chainsaw Man</h5>
+            <h6>EP 8/12</h6>
+          </div>
+          <div class="col">
+            <img
+              src="https://cdn.animixplay.to/i/5660afa590de3d8493d72abc2aef7d4c.jpg"
+            />
+            <h5>Bleach: Thousand-Year Blood War</h5>
+            <h6>EP 8/13</h6>
+          </div>
+          <div class="col">
+            <img
+              src="https://cdn.animixplay.to/i/55b1e8116c273ed5f56aaf06279cfb6d.jpg"
+            />
+            <h5>Blue Lock</h5>
+            <h6>EP 8/24</h6>
+          </div>
+          <div class="col">
+            <img src="https://cdn.animixplay.to/min/mal/1483/126005.jpg" />
+            <h5>My Hero Academia Season 6</h5>
+            <h6>EP 9/25</h6>
+          </div>
+        </div>
+        <br />
+        <div class="row row-cols-4">
+          <div class="col">
+            <img
+              src="https://cdn.animixplay.to/i/d745de809e9219112a3d2dd36fada30f.jpg"
+            />
+            <h5>Mob Psycho 100 III</h5>
+            <h6>EP 9/?</h6>
+          </div>
+          <div class="col">
+            <img
+              src="https://gogocdn.net/cover/black-clover-jump-festa-2016-special.png"
+            />
+            <h5>Black Clover</h5>
+            <h6>EP 170/170</h6>
+          </div>
+          <div class="col">
+            <img
+              src="https://cdn.animixplay.to/i/2b749c9e3e272f2cf4b4f019ffe6c252.jpg"
+            />
+            <h5>Boruto: Naruto Next Generations</h5>
+            <h6>EP 257/?</h6>
+          </div>
+          <div class="col">
+            <img
+              src="https://cdn.myanimelist.net/images/anime/1676/128448.jpg"
+            />
+            <h5>Jujutsu Kaisen</h5>
+            <h6>EP 24/24</h6>
+          </div>
+        </div>
+        <br/>
+      </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
