refactored code in all pages

--- a/sign-up/signup.html
+++ b/sign-up/signup.html
@@ -16,9 +16,19 @@
     <div class="container">
       <div class="row">
         <a
-          style="font-weight: 900; color: white; text-decoration: none; margin-top: 10px;"
+          style="
+            font-weight: 900;
+            color: white;
+            text-decoration: none;
+            margin-top: 10px;
+          "
           href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\home\home.html"
-          ><b>Reynime</b></a
+        >
+          <img
+            src="https://cdn-icons-png.flaticon.com/128/3114/3114934.png"
+            style="width: 20px; height: 20px;"
+          />
+          <b style="padding-top: 17px;"> Reynime </b></a
         >
         <div class="col-4 offset-md-3 mx-auto my-auto">
           <div class="card mt-5">
