--- a/home/home.html
+++ b/home/home.html
@@ -20,21 +20,25 @@
         <div class="collapse navbar-collapse ml-8" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item" id="home">
-              <a class="nav-link active text-white" aria-current="page" href="#"
+              <a class="nav-link active text-white" aria-current="page" href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\home\home.html"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Browse</a>
+              <a
+                class="nav-link"
+                href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\view-more\viewmore.html"
+                >Browse</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Search</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Schedule</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Random</a>
+              <a class="nav-link" href="#">
+                <img
+                  src="https://cdn-icons-png.flaticon.com/128/2652/2652234.png"
+                  style="width: 20px; height: 20px"
+                />
+                Search
+              </a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -44,21 +48,39 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Extras
+                Genre
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">AMV</a></li>
-                <li><a class="dropdown-item" href="#">Art Gallery</a></li>
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Adventure</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Spring</a>
+                  <a class="dropdown-item" href="#">Comedy</a>
                 </li>
               </ul>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
+                href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\view-more\viewmore.html"
+                >Schedule</a
+              >
+            </li>
+             <li class="nav-item">
+              <a
+                class="nav-link"
+                href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\view-more\viewmore.html"
+                >Random</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
                 href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\login\login.html"
               >
+                <img
+                  src="https://cdn-icons-png.flaticon.com/128/5087/5087592.png"
+                  style="width: 30px; height: 30px"
+                />
                 Login
               </a>
             </li>
