--- a/login/login.html
+++ b/login/login.html
@@ -23,8 +23,14 @@
             margin-top: 10px;
           "
           href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\home\home.html"
-          ><b>Reynime</b></a
+          >
+          <img
+            src="https://cdn-icons-png.flaticon.com/128/3114/3114934.png"
+            style="width: 20px; height: 20px;"
+          />
+          <b>Reynime</b></a
         >
+
         <div class="col-4 offset-md-3 mx-auto my-auto">
           <div class="card mt-5">
             <div class="card-body text-center">
