--- a/view-more/viewmore.html
+++ b/view-more/viewmore.html
@@ -9,29 +9,35 @@
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
-    /> 
+    />
     <link href="view-more.css" rel="stylesheet" />
   </head>
   <body class="bg-dark">
     <nav class="navbar navbar-expand-lg sticky-top text-white" id="nav-bar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\home\home.html" id="web-name"><b>Reynime</b></a>
+        <a class="navbar-brand" href="#" id="web-name"><b>Reynime</b></a>
         <div class="collapse navbar-collapse ml-8" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item" id="home">
-              <a class="nav-link active text-white" aria-current="page" href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\home\home.html">Home</a>
+              <a class="nav-link active text-white" aria-current="page" href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\home\home.html"
+                >Home</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Browse</a>
+              <a
+                class="nav-link"
+                href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\view-more\viewmore.html"
+                >Browse</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Search</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Schedule</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Random</a>
+              <a class="nav-link" href="#">
+                <img
+                  src="https://cdn-icons-png.flaticon.com/128/2652/2652234.png"
+                  style="width: 20px; height: 20px"
+                />
+                Search
+              </a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -41,18 +47,39 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                Extras
+                Genre
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">AMV</a></li>
-                <li><a class="dropdown-item" href="#">Art Gallery</a></li>
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Adventure</a></li>
                 <li>
-                  <a class="dropdown-item" href="#">Spring</a>
+                  <a class="dropdown-item" href="#">Comedy</a>
                 </li>
               </ul>
             </li>
              <li class="nav-item">
-              <a class="nav-link" href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\login\login.html">
+              <a
+                class="nav-link"
+                href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\view-more\viewmore.html"
+                >Schedule</a
+              >
+            </li>
+             <li class="nav-item">
+              <a
+                class="nav-link"
+                href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\view-more\viewmore.html"
+                >Random</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\login\login.html"
+              >
+                <img
+                  src="https://cdn-icons-png.flaticon.com/128/5087/5087592.png"
+                  style="width: 30px; height: 30px"
+                />
                 Login
               </a>
             </li>
@@ -61,123 +88,119 @@
       </div>
     </nav>
     <div class="container text-center text-white mt-4">
-        <div class="row row-cols-4">
-          <div class="col">
-            <img src="https://cdn.animixplay.to/min/mal/1806/126216.jpg" />
-            <h5 class="mt-1">Chainsaw Man</h5>
-            <h6>EP 8/12</h6>
-          </div>
-          <div class="col">
-            <img
-              src="https://cdn.animixplay.to/i/5660afa590de3d8493d72abc2aef7d4c.jpg"
-            />
-            <h5>Bleach: Thousand-Year Blood War</h5>
-            <h6>EP 8/13</h6>
-          </div>
-          <div class="col">
-            <img
-              src="https://cdn.animixplay.to/i/55b1e8116c273ed5f56aaf06279cfb6d.jpg"
-            />
-            <h5>Blue Lock</h5>
-            <h6>EP 8/24</h6>
-          </div>
-          <div class="col">
-            <img src="https://cdn.animixplay.to/min/mal/1483/126005.jpg" />
-            <h5>My Hero Academia Season 6</h5>
-            <h6>EP 9/25</h6>
-          </div>
+      <div class="row row-cols-4" style="padding-top: 30px;">
+        <div class="col">
+          <img src="https://cdn.animixplay.to/min/mal/1806/126216.jpg" />
+          <h5 class="mt-1">Chainsaw Man</h5>
+          <h6>EP 8/12</h6>
         </div>
-        <br />
-        <div class="row row-cols-4">
-          <div class="col">
-            <img
-              src="https://cdn.animixplay.to/i/d745de809e9219112a3d2dd36fada30f.jpg"
-            />
-            <h5>Mob Psycho 100 III</h5>
-            <h6>EP 9/?</h6>
-          </div>
-          <div class="col">
-            <img
-              src="https://gogocdn.net/cover/black-clover-jump-festa-2016-special.png"
-            />
-            <h5>Black Clover</h5>
-            <h6>EP 170/170</h6>
-          </div>
-          <div class="col">
-            <img
-              src="https://cdn.animixplay.to/i/2b749c9e3e272f2cf4b4f019ffe6c252.jpg"
-            />
-            <h5>Boruto: Naruto Next Generations</h5>
-            <h6>EP 257/?</h6>
-          </div>
-          <div class="col">
-            <img
-              src="https://cdn.myanimelist.net/images/anime/1676/128448.jpg"
-            />
-            <h5>Jujutsu Kaisen</h5>
-            <h6>EP 24/24</h6>
-          </div>
+        <div class="col">
+          <img
+            src="https://cdn.animixplay.to/i/5660afa590de3d8493d72abc2aef7d4c.jpg"
+          />
+          <h5>Bleach: Thousand-Year Blood War</h5>
+          <h6>EP 8/13</h6>
         </div>
-        <br/>
-        <div class="row row-cols-4">
-          <div class="col">
-            <img src="https://cdn.animixplay.to/min/mal/1806/126216.jpg" />
-            <h5 class="mt-1">Chainsaw Man</h5>
-            <h6>EP 8/12</h6>
-          </div>
-          <div class="col">
-            <img
-              src="https://cdn.animixplay.to/i/5660afa590de3d8493d72abc2aef7d4c.jpg"
-            />
-            <h5>Bleach: Thousand-Year Blood War</h5>
-            <h6>EP 8/13</h6>
-          </div>
-          <div class="col">
-            <img
-              src="https://cdn.animixplay.to/i/55b1e8116c273ed5f56aaf06279cfb6d.jpg"
-            />
-            <h5>Blue Lock</h5>
-            <h6>EP 8/24</h6>
-          </div>
-          <div class="col">
-            <img src="https://cdn.animixplay.to/min/mal/1483/126005.jpg" />
-            <h5>My Hero Academia Season 6</h5>
-            <h6>EP 9/25</h6>
-          </div>
+        <div class="col">
+          <img
+            src="https://cdn.animixplay.to/i/55b1e8116c273ed5f56aaf06279cfb6d.jpg"
+          />
+          <h5>Blue Lock</h5>
+          <h6>EP 8/24</h6>
         </div>
-        <br />
-        <div class="row row-cols-4">
-          <div class="col">
-            <img
-              src="https://cdn.animixplay.to/i/d745de809e9219112a3d2dd36fada30f.jpg"
-            />
-            <h5>Mob Psycho 100 III</h5>
-            <h6>EP 9/?</h6>
-          </div>
-          <div class="col">
-            <img
-              src="https://gogocdn.net/cover/black-clover-jump-festa-2016-special.png"
-            />
-            <h5>Black Clover</h5>
-            <h6>EP 170/170</h6>
-          </div>
-          <div class="col">
-            <img
-              src="https://cdn.animixplay.to/i/2b749c9e3e272f2cf4b4f019ffe6c252.jpg"
-            />
-            <h5>Boruto: Naruto Next Generations</h5>
-            <h6>EP 257/?</h6>
-          </div>
-          <div class="col">
-            <img
-              src="https://cdn.myanimelist.net/images/anime/1676/128448.jpg"
-            />
-            <h5>Jujutsu Kaisen</h5>
-            <h6>EP 24/24</h6>
-          </div>
+        <div class="col">
+          <img src="https://cdn.animixplay.to/min/mal/1483/126005.jpg" />
+          <h5>My Hero Academia Season 6</h5>
+          <h6>EP 9/25</h6>
         </div>
-        <br/>
       </div>
+      <br />
+      <div class="row row-cols-4">
+        <div class="col">
+          <img
+            src="https://cdn.animixplay.to/i/d745de809e9219112a3d2dd36fada30f.jpg"
+          />
+          <h5>Mob Psycho 100 III</h5>
+          <h6>EP 9/?</h6>
+        </div>
+        <div class="col">
+          <img
+            src="https://gogocdn.net/cover/black-clover-jump-festa-2016-special.png"
+          />
+          <h5>Black Clover</h5>
+          <h6>EP 170/170</h6>
+        </div>
+        <div class="col">
+          <img
+            src="https://cdn.animixplay.to/i/2b749c9e3e272f2cf4b4f019ffe6c252.jpg"
+          />
+          <h5>Boruto: Naruto Next Generations</h5>
+          <h6>EP 257/?</h6>
+        </div>
+        <div class="col">
+          <img src="https://cdn.myanimelist.net/images/anime/1676/128448.jpg" />
+          <h5>Jujutsu Kaisen</h5>
+          <h6>EP 24/24</h6>
+        </div>
+      </div>
+      <br />
+      <div class="row row-cols-4">
+        <div class="col">
+          <img src="https://cdn.animixplay.to/min/mal/1806/126216.jpg" />
+          <h5 class="mt-1">Chainsaw Man</h5>
+          <h6>EP 8/12</h6>
+        </div>
+        <div class="col">
+          <img
+            src="https://cdn.animixplay.to/i/5660afa590de3d8493d72abc2aef7d4c.jpg"
+          />
+          <h5>Bleach: Thousand-Year Blood War</h5>
+          <h6>EP 8/13</h6>
+        </div>
+        <div class="col">
+          <img
+            src="https://cdn.animixplay.to/i/55b1e8116c273ed5f56aaf06279cfb6d.jpg"
+          />
+          <h5>Blue Lock</h5>
+          <h6>EP 8/24</h6>
+        </div>
+        <div class="col">
+          <img src="https://cdn.animixplay.to/min/mal/1483/126005.jpg" />
+          <h5>My Hero Academia Season 6</h5>
+          <h6>EP 9/25</h6>
+        </div>
+      </div>
+      <br />
+      <div class="row row-cols-4">
+        <div class="col">
+          <img
+            src="https://cdn.animixplay.to/i/d745de809e9219112a3d2dd36fada30f.jpg"
+          />
+          <h5>Mob Psycho 100 III</h5>
+          <h6>EP 9/?</h6>
+        </div>
+        <div class="col">
+          <img
+            src="https://gogocdn.net/cover/black-clover-jump-festa-2016-special.png"
+          />
+          <h5>Black Clover</h5>
+          <h6>EP 170/170</h6>
+        </div>
+        <div class="col">
+          <img
+            src="https://cdn.animixplay.to/i/2b749c9e3e272f2cf4b4f019ffe6c252.jpg"
+          />
+          <h5>Boruto: Naruto Next Generations</h5>
+          <h6>EP 257/?</h6>
+        </div>
+        <div class="col">
+          <img src="https://cdn.myanimelist.net/images/anime/1676/128448.jpg" />
+          <h5>Jujutsu Kaisen</h5>
+          <h6>EP 24/24</h6>
+        </div>
+      </div>
+      <br />
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
