--- a/login/login.html
+++ b/login/login.html
@@ -73,7 +73,7 @@
                   </h6>
                 </div>
                 <div class="d-grid gap-2">
-                  <button class="btn btn-dark">Login</button>
+                  <button class="btn btn-dark" onclick="loginUser()">Login</button>
                 </div>
               </form>
             </div>
@@ -86,6 +86,6 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <script src="script.js"></script>
+    <script src="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\assets\scripts\script.js"></script>
   </body>
 </html>
