--- a/sign-up/signup.html
+++ b/sign-up/signup.html
@@ -63,7 +63,7 @@
                   />
                 </div>
                 <div class="d-grid gap-2">
-                  <button class="btn btn-dark">Sign Up</button>
+                  <button class="btn btn-dark" onclick="signupUser()">Sign Up</button>
                 </div>
               </form>
             </div>
@@ -76,6 +76,6 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <script src="script.js"></script>
+    <script src="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\assets\scripts\script.js"></script>
   </body>
 </html>
