--- a/view-more/viewmore.html
+++ b/view-more/viewmore.html
@@ -19,7 +19,10 @@
         <div class="collapse navbar-collapse ml-8" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item" id="home">
-              <a class="nav-link active text-white" aria-current="page" href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\home\home.html"
+              <a
+                class="nav-link active text-white"
+                aria-current="page"
+                href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\home\home.html"
                 >Home</a
               >
             </li>
@@ -57,14 +60,14 @@
                 </li>
               </ul>
             </li>
-             <li class="nav-item">
+            <li class="nav-item">
               <a
                 class="nav-link"
                 href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\view-more\viewmore.html"
                 >Schedule</a
               >
             </li>
-             <li class="nav-item">
+            <li class="nav-item">
               <a
                 class="nav-link"
                 href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\view-more\viewmore.html"
@@ -88,7 +91,7 @@
       </div>
     </nav>
     <div class="container text-center text-white mt-4">
-      <div class="row row-cols-4" style="padding-top: 30px;">
+      <div class="row row-cols-4" style="padding-top: 30px">
         <div class="col">
           <img src="https://cdn.animixplay.to/min/mal/1806/126216.jpg" />
           <h5 class="mt-1">Chainsaw Man</h5>
@@ -125,7 +128,7 @@
         </div>
         <div class="col">
           <img
-            src="https://gogocdn.net/cover/black-clover-jump-festa-2016-special.png"
+            src="https://cdn.myanimelist.net/images/anime/2/88336.jpg"
           />
           <h5>Black Clover</h5>
           <h6>EP 170/170</h6>
@@ -146,57 +149,57 @@
       <br />
       <div class="row row-cols-4">
         <div class="col">
-          <img src="https://cdn.animixplay.to/min/mal/1806/126216.jpg" />
-          <h5 class="mt-1">Chainsaw Man</h5>
-          <h6>EP 8/12</h6>
+          <img
+            src="https://cdn.animixplay.to/i/2a749e177392587df96b26cbe30a51de.jpg"
+          />
+
+          <h5 class="mt-1">Attack Of Titan: The Final Season</h5>
+          <h6>EP 16/16</h6>
+        </div>
+        <div class="col">
+          <img src="https://cdn.animixplay.to/min/mal/1286/99889.jpg" />
+          <h5>Demon Slayer</h5>
+          <h6>EP 26/26</h6>
         </div>
         <div class="col">
           <img
-            src="https://cdn.animixplay.to/i/5660afa590de3d8493d72abc2aef7d4c.jpg"
+            src="https://cdn.animixplay.to/i/79cccf7f5390f397ace739a0aec23b04.jpg"
           />
-          <h5>Bleach: Thousand-Year Blood War</h5>
-          <h6>EP 8/13</h6>
+          <h5>Demon Slayer: Season 2</h5>
+          <h6>EP 11/11</h6>
         </div>
         <div class="col">
           <img
-            src="https://cdn.animixplay.to/i/55b1e8116c273ed5f56aaf06279cfb6d.jpg"
+            src="https://cdn.animixplay.to/i/c7a7356fa37878210b14144e9a5c49e1.jpg"
           />
-          <h5>Blue Lock</h5>
-          <h6>EP 8/24</h6>
-        </div>
-        <div class="col">
-          <img src="https://cdn.animixplay.to/min/mal/1483/126005.jpg" />
-          <h5>My Hero Academia Season 6</h5>
-          <h6>EP 9/25</h6>
+          <h5>Hunter x Hunter</h5>
+          <h6>EP 148/148</h6>
         </div>
       </div>
       <br />
       <div class="row row-cols-4">
         <div class="col">
           <img
-            src="https://cdn.animixplay.to/i/d745de809e9219112a3d2dd36fada30f.jpg"
+            src="https://cdn.animixplay.to/i/d7c4f5008a6c3a4f4d354e531939906f.jpg"
           />
-          <h5>Mob Psycho 100 III</h5>
-          <h6>EP 9/?</h6>
+          <h5>Naruto Shippuden</h5>
+          <h6>EP 500/500</h6>
         </div>
         <div class="col">
-          <img
-            src="https://gogocdn.net/cover/black-clover-jump-festa-2016-special.png"
-          />
-          <h5>Black Clover</h5>
-          <h6>EP 170/170</h6>
+          <img src="https://cdn.animixplay.to/min/mal/1900/110097.jpg" />
+
+          <h5 class="mt-1">Don't Toy with Me, Miss Nagatoro</h5>
+          <h6>EP 12/12</h6>
         </div>
         <div class="col">
-          <img
-            src="https://cdn.animixplay.to/i/2b749c9e3e272f2cf4b4f019ffe6c252.jpg"
-          />
-          <h5>Boruto: Naruto Next Generations</h5>
-          <h6>EP 257/?</h6>
+          <img src="https://cdn.animixplay.to/min/mal/12/76049.jpg" />
+          <h5>One Punch Man: Season 1</h5>
+          <h6>EP 12/12</h6>
         </div>
         <div class="col">
-          <img src="https://cdn.myanimelist.net/images/anime/1676/128448.jpg" />
-          <h5>Jujutsu Kaisen</h5>
-          <h6>EP 24/24</h6>
+          <img src="https://cdn.animixplay.to/min/mal/1247/122044.jpg" />
+          <h5>One Punch Man: Season 1</h5>
+          <h6>EP 12/12</h6>
         </div>
       </div>
       <br />
