refactored code for signup page

--- a/sign-up/signup.html
+++ b/sign-up/signup.html
@@ -62,6 +62,17 @@
                     placeholder="password"
                   />
                 </div>
+                <div>
+                  <h6>
+                    Already have an account?
+                    <a
+                      style="color: black"
+                      href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\login\login.html"
+                    >
+                      login
+                    </a>
+                  </h6>
+                </div>
                 <div class="d-grid gap-2">
                   <button class="btn btn-dark" onclick="signupUser()">Sign Up</button>
                 </div>
