refactored code in login and home pages

--- a/home/home.html
+++ b/home/home.html
@@ -56,6 +56,14 @@
                 <li>
                   <a class="dropdown-item" href="#">Comedy</a>
                 </li>
+                <li><a class="dropdown-item" href="#">Scifi</a></li>
+                <li><a class="dropdown-item" href="#">Drama</a></li>
+                <li>
+                  <a class="dropdown-item" href="#">Shounen</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Slice of life</a>
+                </li>
               </ul>
             </li>
             <li class="nav-item">
@@ -115,6 +123,12 @@
             data-bs-slide-to="2"
             aria-label="Slide 3"
           ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"
+          ></button>
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
@@ -145,6 +159,16 @@
             />
             <div class="carousel-caption d-none d-md-block">
               <h5>Attack Of Titan</h5>
+            </div>
+          </div>
+          <div class="carousel-item" data-bs-interval="4000">
+            <img
+              src="https://genoanime.com/img/banner/26.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Chainsaw Man</h5>
             </div>
           </div>
         </div>
@@ -180,7 +204,13 @@
               href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\view-more\viewmore.html"
               class="text-white"
             >
-              <h4 id="view-more-text">View More</h4>
+            <h4 id="view-more-text">View More
+              <img
+                src="https://cdn-icons-png.flaticon.com/128/4822/4822310.png"
+                style="width: 20px; height: 20px"
+              />
+            </h4>
+              </a>
               <span class="arrow_right"></span
             ></a>
           </div>
