--- a/view-more/viewmore.html
+++ b/view-more/viewmore.html
@@ -58,6 +58,14 @@
                 <li>
                   <a class="dropdown-item" href="#">Comedy</a>
                 </li>
+                <li><a class="dropdown-item" href="#">Scifi</a></li>
+                <li><a class="dropdown-item" href="#">Drama</a></li>
+                <li>
+                  <a class="dropdown-item" href="#">Shounen</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="#">Slice of life</a>
+                </li>
               </ul>
             </li>
             <li class="nav-item">
@@ -127,9 +135,7 @@
           <h6>EP 9/?</h6>
         </div>
         <div class="col">
-          <img
-            src="https://cdn.myanimelist.net/images/anime/2/88336.jpg"
-          />
+          <img src="https://cdn.myanimelist.net/images/anime/2/88336.jpg" />
           <h5>Black Clover</h5>
           <h6>EP 170/170</h6>
         </div>
@@ -198,7 +204,7 @@
         </div>
         <div class="col">
           <img src="https://cdn.animixplay.to/min/mal/1247/122044.jpg" />
-          <h5>One Punch Man: Season 1</h5>
+          <h5>One Punch Man: Season 2</h5>
           <h6>EP 12/12</h6>
         </div>
       </div>
