--- a/login/login.html
+++ b/login/login.html
@@ -23,10 +23,10 @@
             margin-top: 10px;
           "
           href="C:\Users\hp\Desktop\Nsano Ltd\Training\Web Dev\{}\FPI_Project\reynime\home\home.html"
-          >
+        >
           <img
             src="https://cdn-icons-png.flaticon.com/128/3114/3114934.png"
-            style="width: 20px; height: 20px;"
+            style="width: 20px; height: 20px"
           />
           <b>Reynime</b></a
         >
@@ -57,9 +57,8 @@
                   />
                 </div>
                 <div class="form-check mb-4">
-                  <!-- <label class="form-check-label"> -->
-                  <input class="form-check-input" type="checkbox" /> Remember me
-                  <!-- </label> -->
+                  <input class="form-check-input" type="checkbox" />
+                  <h6 style="margin-right: 190px; color: grey;">Remember me</h6>
                 </div>
                 <div>
                   <h6>
@@ -73,7 +72,9 @@
                   </h6>
                 </div>
                 <div class="d-grid gap-2">
-                  <button class="btn btn-dark" onclick="loginUser()">Login</button>
+                  <button class="btn btn-dark" onclick="loginUser()">
+                    Login
+                  </button>
                 </div>
               </form>
             </div>
