--- a/login/login.html
+++ b/login/login.html
@@ -28,8 +28,8 @@
             src="https://cdn-icons-png.flaticon.com/128/3114/3114934.png"
             style="width: 20px; height: 20px"
           />
-          <b>Reynime</b></a
-        >
+          <b>Reynime</b>
+        </a>
 
         <div class="col-4 offset-md-3 mx-auto my-auto">
           <div class="card mt-5">
@@ -58,7 +58,7 @@
                 </div>
                 <div class="form-check mb-4">
                   <input class="form-check-input" type="checkbox" />
-                  <h6 style="margin-right: 190px; color: grey;">Remember me</h6>
+                  <h6 style="margin-right: 190px; color: grey">Remember me</h6>
                 </div>
                 <div>
                   <h6>
